--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ img[alt="www.000webhost.com"]{display:none;}
     src="https://ps4xploit900.github.io/jailbreak/9v4/"></iframe><br><br><br>
   <div id="menu" style="margin-left:45px;"><img src="img/icon-goldhen.png"><br>
     <img src="img/icon-options.png" width="175" height="175" vspace="0" border="0" usemap="#links" ><br>
-	<a href="https://ps4xploit900.github.io/jailbreak/9v4/" class="Estilo8" style="color:#FFFFFF; font-family:"Times New Roman", Times, serif;"><img src="img/icon-offline.png" width="199" height="30" vspace="4" border="0"></a><br>
+	<a href="https://ps4xploit900.github.io/jailbreak/offline/9v4/index.html" class="Estilo8" style="color:#FFFFFF; font-family:"Times New Roman", Times, serif;"><img src="img/icon-offline.png" width="199" height="30" vspace="4" border="0"></a><br>
 	<a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html" class="Estilo8" style="color:#FFFFFF; font-family:"Times New Roman", Times, serif;"><img src="img/buton-payloads.png" width="199" height="42" border="0"></a>
     <!-- partial:index.partial.html -->
     <section>
