--- a/index-2.html
+++ b/index-2.html
@@ -25,6 +25,8 @@
 			}
 .Estilo5 {font-size: 24px}
         .Estilo6 {color: #FF0000}
+        .Estilo7 {font-size: 16px}
+        .Estilo9 {font-size: 12px}
         </style>
 </head>
 <body onLoad="setTimeout(webkitXploit, 1500);">
@@ -43,7 +45,8 @@
 		</script>
 	<br><br><br><br><br><br><br><br>
 <p><span class="Estilo2">!!“Una vez <span class="Estilo1">activado goldHen</span> ya podrás ...”</span><span class="Estilo5"> →<a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html" class="Estilo1">ENVIAR PAYLOADS</a>←</span><br>
-<span class="Estilo2">*<span class="Estilo6">Recuerda</span> activar “Enable Binloader Server”*</span></p>
+<span class="Estilo2">*<span class="Estilo6">Recuerda</span> activar “Enable Binloader Server”*</span><br><br>
+<span class="Estilo7">Special Thanks to: leeful, karo_sharifi, ChendoChap, SiSTR0 ... And everyone who contributes to the scene<span class="Estilo9"> Website by Mouuu</span></span></p>
 </body>
 
 </html>
