--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	
-<!-- PS4 Jailbreak Host 9.00FW > Special Thanks to: @leeful @karo_sharifi SiSTR0 . And everyone who contributes to the scene. Website by Mouuu @_mour0ne_ -Youtube: Mouuu -->
+<!-- PS4 Jailbreak Host 9.00FW > Special Thanks to: @leeful @karo_sharifi ChendoChap SiSTR0 . And everyone who contributes to the scene. Website by Mouuu @_mour0ne_ -Youtube: Mouuu -->
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
 <head>
 		<meta charset="UTF-8">
