--- a/index-2.html
+++ b/index-2.html
@@ -6,6 +6,10 @@
 <!--
 .Estilo1 {color: #FFFF00}
 .Estilo2 {font-size: 18px}
+.Estilo11 {
+	font-size: 36px;
+	color: #FFFFFF;
+}
 -->
 </style>
 <head>
@@ -47,7 +51,8 @@
 	<br><br><br><br><br><br><br><br>
 <p><span class="Estilo2">!!“Una vez <span class="Estilo1">activado goldHen</span> ya podrás ...”</span><span class="Estilo5"> →<a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html" class="Estilo1">ENVIAR PAYLOADS</a>←</span><br>
 <span class="Estilo2">*<span class="Estilo6">Recuerda</span> activar “Enable Binloader Server”*</span><br><br>
-<span class="Estilo7">Special Thanks to: leeful, karo_sharifi, ChendoChap, SiSTR0 ... And everyone who contributes to the scene<span class="Estilo9"> Website by <a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo10" style="text-decoration:none">Mouuu</a></span></span></p>
+<span class="Estilo7">Special Thanks to: leeful, karo_sharifi, ChendoChap, SiSTR0 ... And everyone who contributes to the scene<span class="Estilo9"> Website by <a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo10" style="text-decoration:none">Mouuu</a></span></span><br><br>
+<a href="https://ps4xploit900.github.io/jailbreak/" class="Estilo11" style="text-decoration:none">←</a></p>
 </body>
 
 </html>
