--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@ var PL1 = [233,136,16,0,0,243,15,30,250,85,186,4,0,0,0,83,72,137,245,72,137,251,
 <br>
 <span class="Estilo7">Special Thanks to: leeful, karo_sharifi, ChendoChap, SiSTR0 ... And everyone who contributes to the scene<span class="Estilo9"> Website by <a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo10" style="text-decoration:none">Mouuu</a></span></span><span class="Estilo16"><br>
 <br>
-<a href="https://ps4xploit900.github.io/jailbreak/index.html" class="Estilo12" style="text-decoration:none">← Para reiniciar el proceso ve ajustes/eliminar cookies,borrar datos del sitio web y haz clic aquí •</a></span></p>
+<a href="https://ps4xploit900.github.io/jailbreak/index.html" class="Estilo12" style="text-decoration:none">← Para reiniciar el proceso ve ajustes/eliminar cookies,borrar datos del sitio web •</a></span></p>
 </body>
 </html>
