--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta charset="UTF-8">
 		<title>PS4 XPLOIT 9.00 GoldHEN 2.2.2 HOST design by Mouuu</title>
 		<style>
+		html {
+ border: 8px solid #FFFC33;!important
+ min-height: 100%;
+}
 			body{
 			background-color:#000000;
 			color:white;
