--- a/cache.html
+++ b/cache.html
@@ -18,27 +18,14 @@
 				}
 		</style>
 		<script>
-			history.replaceState(null,null,'index.html');
-			var histlength=history.length;history.go(-histlength);
-			function DLProgress(e){
-				Percent=(Math.round(e.loaded / e.total * 100));
-				msgs.innerHTML="Instalando Cache ... " + Percent + "%"};
-			function DisplayCacheProgress(){
-				setTimeout(function(){
-					msgs.innerHTML="Cache instalado con éxito";
-				},2000);
-				setTimeout(function(){
-					location.reload();
-				},3000);
-				}
-				window.applicationCache.addEventListener("progress",DLProgress,false);
-				window.applicationCache.oncached=function(e){
-				DisplayCacheProgress();
-			};
-			window.applicationCache.onupdateready=function(e){
-				DisplayCacheProgress();
-			};
-		</script>
+history.replaceState(null,null,'index.html');var histlength=history.length;history.go(-histlength);
+function DLProgress(e){Percent=(Math.round(e.loaded / e.total * 100));msgs.innerHTML="Instalando Cache ... " + Percent + "%"};
+function DisplayCacheProgress(){
+setTimeout(function(){msgs.innerHTML="Cache instalado con éxito";},2000);
+setTimeout(function(){location.reload();},3000);
+}
+window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
+</script>
 	</head>
 	<body style=overflow:hidden>
 		<div id=msgs class=info style='-webkit-font-feature-settings:"tnum";font-feature-settings:"tnum";'></div>
