--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 .Estilo17 {font-size: 18px}
         </style>
 	</head>
-	<body onload="setTimeout(webkitExploit,500);">
+	<body onLoad="setTimeout(webkitExploit,500);">
 <script src="exploit.js"></script>
 		<div id="msgs" class="info"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="150px" height="150px" viewBox="0 0 150 150" version="1.1">
   <defs>
@@ -56,7 +56,7 @@ if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
 </script>
 
 	<br><br><br><br><br><br><br><br>
-<p><span class="Estilo2 Estilo15">!!“Una vez <span class="Estilo1 Estilo11">activado goldHen</span> ya podrás ...”</span><span class="Estilo5"> →<a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html" class="Estilo1 Estilo11">ENVIAR PAYLOADS</a>←</span><span class="Estilo16"><br>
+<p><span class="Estilo2 Estilo15">!!“Una vez <span class="Estilo1 Estilo11">activado goldHen</span> ya podrás ...”</span><button type="button" ><a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html" >PAYLOADS</a></button><br>
 <span class="Estilo2  Estilo17">*<span class="Estilo6">Recuerda</span> activar “Enable Binloader Server”*</span></span><br>
 <br>
 <span class="Estilo7">Special Thanks to: leeful, karo_sharifi, ChendoChap, SiSTR0 ... And everyone who contributes to the scene<span class="Estilo9"> Website by <a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo10" style="text-decoration:none">Mouuu</a></span></span><span class="Estilo16"><br>
