--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  min-height: 100%;
 }
 .button {
-  border: none;
+  border-color: #FFFC33;
   color: black;
   padding: 15px 32px;
   text-align: center;
@@ -21,7 +21,7 @@
   cursor: pointer;
 }
 
-.button1 {background-color: #FFFC33;} /* yellowbutton-payloads */
+.button1 {background-color: black;} /* yellowbutton-payloads */
 			body{
 			background-color:#000000;
 			color:white;
