--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@ if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
 <br>
 <span class="Estilo7">Special Thanks to: leeful, karo_sharifi, ChendoChap, SiSTR0 ... And everyone who contributes to the scene<span class="Estilo9"> Website by <a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo10" style="text-decoration:none">Mouuu</a></span></span><span class="Estilo16"><br>
 <br>
-<a href="https://ps4xploit900.github.io/jailbreak/index.html" class="Estilo12" style="text-decoration:none">← Para reiniciar el proceso ve ajustes/eliminar cookies,borrar datos del sitio web •</a></span></p>
+<a href="https://ps4xploit900.github.io/jailbreak/index.html" class="Estilo12" style="text-decoration:none">∆❍X❑<br>← Para reiniciar el proceso ve ajustes/eliminar cookies,borrar datos del sitio web •</a></span></p>
 </body>
 </html>
