--- a/PS4/900/index.html
+++ b/PS4/900/index.html
@@ -144,11 +144,8 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <p style="border: 1px solid #FCFF33;  background-color:#000000;"> Disable ASLR</p> </button>
 <button class="btn" onclick=load_exitidu()> <span class="btn13"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-idu-exit.png" width="69" height="69"></span><br>
 <p style="border: 1px solid #FCFF33;  background-color:#000000;"> Exit IDU</p> </button>
-<button class="btn" onclick=load_rifRen()> <span class="btn14"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-rif-renamer.png" width="69" height="69"></span><br>
-<p style="border: 1px solid #FCFF33;  background-color:#000000;"> RIF Rename</p> </button>
-<button class="btn" onclick=load_permUart()> <span class="btn15"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-uart.png" width="69" height="69"></span>
-<p class="Estilo10" style="border: 1px solid #FCFF33;  background-color:#000000;"> Permanent UART</p> 
-</button>
+<button class="btn" onclick=load_rifRen()> <span class="btn14"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-gamedumper.png" width="69" height="69"></span><br>
+<p style="border: 1px solid #FCFF33;  background-color:#000000;"> PKG Backup</p> </button>
 <br>
 <button class="btn" onclick=load_webrte() style="margin-left: 75px;"> <span class="btn16"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-webrte.png" width="69" height="69"></span>
 <p style="border: 1px solid #FCFF33;  background-color:#000000;"> WebRTE</p> </button>
@@ -157,9 +154,7 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="Cac
 <button class="btn" onclick=load_fanthreshold()> <span class="btn19"><img src="https://ps4xploit900.github.io/jailbreak/img/icon-fan.png" width="69" height="69"></span><br>
 <p style="border: 1px solid #FCFF33;  background-color:#000000;"> Fan Threshold</p> </button>
 <select id="tempC"></select>&#176;C
-<br><h1>Send payload <img src="../../img/cargando-loading-payload.gif" width="16" height="16"> please wait ...</h1>
-<div align="center"><p style="border: 2px solid #FCFF33; text-align:center; padding: 10px; background-color:#000000; width:919px; color: black; font-family: arial,helvetica; font-size: 16px; font-weight: bold;"><span class="Estilo1 Estilo5" style="text-align:center;">Remember:</span> <span class="Estilo4 Estilo6"><span class="Estilo9" style="color:#FFFFFF;">If the browser indicates that &quot;There is not enough free system memory&quot; it is normal, try again.</span></span></p>
-</div>
+<br><h1>&nbsp;</h1>
 <h1 style="margin-top: 15px; color: yellow;">Special Thanks to:<a href="https://twitter.com/leeful74" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">@leeful</a><a href="https://twitter.com/karo_sharifi" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">@karo_sharifi</a><a style="color:white; margin-left: 15px;">SiSTR0 ... <span class="Estilo3">And everyone who contributes to the scene</span></a><a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo1" style="color:white; margin-left: 15px;text-decoration: none;">Website by Mouuu</a></h1>
 <script>
 for(var i=40; i<=79; i++){
@@ -174,7 +169,7 @@ tempC.value=60;
 <script>
 function allset(){
 setTimeout(location.reload,1000);
-alert("Payload Loaded... You will get a Memory Error, Press OK after that");
+alert("Payload Cargado... Pulsa aceptar para completar el proceso");
 msgs.innerHTML= LoadedMSG;
 }
 
@@ -186,7 +181,7 @@ msgs.innerHTML="Wait a Moment...";
 
 function load_goldhen2b(){
 var script = document.createElement('script');script.src = "goldhen_2.0b.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + GoldHEN v2.0b... Please Wait !!!";
+msgs.innerHTML="Enviando Payload + GoldHEN v2.0b... Espere porfavor !!!";
 LoadedMSG="GoldHEN v2.0b Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -194,21 +189,21 @@ setTimeout(poc,1500);
 
 function load_goldhen2b2(){
 var script = document.createElement('script');script.src = "goldhen_2.0b2.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + GoldHEN v2.0b2... Please Wait !!!";
+msgs.innerHTML="Enviando Payload + GoldHEN v2.0b2... Espere porfavor !!!";
 LoadedMSG="GoldHEN v2.0b2 Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
 }
 
 function load_binloader(){
-msgs.innerHTML="Loading Jailbreak + Bin Loader... Please Wait !!!";
+msgs.innerHTML="Enviando Payload + Bin Loader... Espere porfavor !!!";
 run_jb = "binloader";
 setTimeout(poc,1500);
 }
 
 function load_todex(){
 var script = document.createElement('script');script.src = "todex.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + ToDex... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + ToDex... Espere porfavor !!!"
 LoadedMSG="ToDex Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -216,7 +211,7 @@ setTimeout(poc,1500);
 
 function load_dumper(){
 var script = document.createElement('script');script.src = "dumper.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + Game Dumper... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + Game Dumper... Espere porfavor !!!"
 LoadedMSG="Game Dumper Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -224,7 +219,7 @@ setTimeout(poc,1500);
 
 function load_ftp(){
 var script = document.createElement('script');script.src = "ftp.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + FTP... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + FTP... Espere porfavor !!!"
 LoadedMSG="FTP Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -232,7 +227,7 @@ setTimeout(poc,1500);
 
 function load_app2usb(){
 var script = document.createElement('script');script.src = "app2usb.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + App2USB... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + App2USB... Espere porfavor !!!"
 LoadedMSG="App2USB Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -240,7 +235,7 @@ setTimeout(poc,1500);
 
 function load_dbackup(){
 var script = document.createElement('script');script.src = "backup.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + DB Backup... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + DB Backup... Espere porfavor !!!"
 LoadedMSG="DB Backup Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -248,7 +243,7 @@ setTimeout(poc,1500);
 
 function load_dbrestore(){
 var script = document.createElement('script');script.src = "restore.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + DB Restore... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + DB Restore... Espere porfavor !!!"
 LoadedMSG="DB Restore Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -256,7 +251,7 @@ setTimeout(poc,1500);
 
 function load_enablebUpdates(){
 var script = document.createElement('script');script.src = "enable-updates.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + Enable Updates... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + Enable Updates... Espere porfavor !!!"
 LoadedMSG="Enable Updates Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -264,7 +259,7 @@ setTimeout(poc,1500);
 
 function load_disableUpdates(){
 var script = document.createElement('script');script.src = "disable-updates.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + Disable Updates... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + Disable Updates... Espere porfavor !!!"
 LoadedMSG="Disable Updates Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -272,7 +267,7 @@ setTimeout(poc,1500);
 
 function load_historyBlocker(){
 var script = document.createElement('script');script.src = "history-blocker.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + History Blocker... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + History Blocker... Espere porfavor !!!"
 LoadedMSG="History Blocker Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -280,7 +275,7 @@ setTimeout(poc,1500);
 
 function load_kernelDump(){
 var script = document.createElement('script');script.src = "kernel-dumper.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + Kernel Dumper... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + Kernel Dumper... Espere porfavor !!!"
 LoadedMSG="Kernel Dumper Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -288,7 +283,7 @@ setTimeout(poc,1500);
 
 function load_moduleDump(){
 var script = document.createElement('script');script.src = "module-dumper.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + Module Dumper... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + Module Dumper... Espere porfavor !!!"
 LoadedMSG="Module Dumper Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -296,7 +291,7 @@ setTimeout(poc,1500);
 
 function load_ps4debug(){
 var script = document.createElement('script');script.src = "ps4debug.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + PS4 Debug... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + PS4 Debug... Espere porfavor !!!"
 LoadedMSG="PS4 Debug Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -304,7 +299,7 @@ setTimeout(poc,1500);
 
 function load_disbAslr(){
 var script = document.createElement('script');script.src = "disable-aslr.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + Disable ASLR... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + Disable ASLR... Espere porfavor !!!"
 LoadedMSG="Disable ASLR Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -312,7 +307,7 @@ setTimeout(poc,1500);
 
 function load_exitidu(){
 var script = document.createElement('script');script.src = "exit-idu.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + Exit IDU... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + Exit IDU... Espere porfavor !!!"
 LoadedMSG="Exit IDU Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -320,23 +315,16 @@ setTimeout(poc,1500);
 
 function load_rifRen(){
 var script = document.createElement('script');script.src = "rif-renamer.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + RIF Renamer... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + PKG Backup... Espere porfavor !!!"
 LoadedMSG="RIF Renamer Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
-}
 
-function load_permUart(){
-var script = document.createElement('script');script.src = "permanent-uart.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + Permanent UART... Please Wait !!!"
-LoadedMSG="Permanent UART Loaded...";
-run_jb = "payload";
-setTimeout(poc,1500);
 }
 
 function load_webrte(){
 var script = document.createElement('script');script.src = "webrte.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + WebRTE... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + WebRTE... Espere porfavor !!!"
 LoadedMSG="WebRTE Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -344,7 +332,7 @@ setTimeout(poc,1500);
 
 function load_fanthreshold(){
 var script = document.createElement('script');script.src = "fan-threshold.js";localStorage.setItem('fanthreshold', tempC.value);document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + Fan Threshold... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + Fan Threshold... Espere porfavor !!!"
 LoadedMSG="Fan Threshold Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
@@ -352,11 +340,12 @@ setTimeout(poc,1500);
 
 function load_toolbox(){
 var script = document.createElement('script');script.src = "orbis-toolbox.js";document.getElementsByTagName('head')[0].appendChild(script);
-msgs.innerHTML="Loading Jailbreak + Orbis-Toolbox... Please Wait !!!"
+msgs.innerHTML="Enviando Payload + Orbis-Toolbox... Espere porfavor !!!"
 LoadedMSG="Orbis-Toolbox Loaded...";
 run_jb = "payload";
 setTimeout(poc,1500);
 }
+
 </script>
 </body>
 </html>
