--- a/PS4/900/cache.html
+++ b/PS4/900/cache.html
@@ -18,7 +18,7 @@
 				}
 		</style>
 		<script>
-history.replaceState(null,null,'/PS4/900/index.html');var histlength=history.length;history.go(-histlength);
+history.replaceState(null,null,'payload.html');var histlength=history.length;history.go(-histlength);
 function DLProgress(e){Percent=(Math.round(e.loaded / e.total * 100));msgs.innerHTML="Instalando Cache ... " + Percent + "%"};
 function DisplayCacheProgress(){
 setTimeout(function(){msgs.innerHTML="Cache instalado con éxito";},2000);
