--- a/silverhen/index.html
+++ b/silverhen/index.html
@@ -63,7 +63,7 @@
   <g id="surface2">
   <use xlink:href="#image5" transform="matrix(0.075,0,0,0.075,0,0)"/>
   </g>
-  </svg><br>Activando WebkitXploit SilverHEN, Espere por favor ... ㋡</div>
+  </svg><br>Activando Xploit SilverHEN, Espere por favor ... ㋡</div>
 <script>
 if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
 </script>
