--- a/silverhen/cache.html
+++ b/silverhen/cache.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
 	<head>
 		<meta charset="UTF-8">
-		<title>PS4 XPLOIT 9.00 SilverHEN HOST by Mouuu</title>
+		<title>PS4 XPLOIT 9.00 SilverHEN 0.1 HOST by Mouuu</title>
 		<style>
 			body{
 				background-color:#000000;
@@ -29,5 +29,7 @@ window.applicationCache.addEventListener("progress",DLProgress,false);window.app
 	</head>
 	<body style=overflow:hidden>
 		<div id=msgs class=info style='-webkit-font-feature-settings:"tnum";font-feature-settings:"tnum";'></div>
+    <p>&nbsp;</p>
+	    <p><img src="loading-playstation.gif" width="800" height="600"></p>
 	</body>
 </html>
