--- a/silverhen/index.html
+++ b/silverhen/index.html
@@ -47,6 +47,7 @@
 	color: #FFFF00;
 	font-weight: bold;
 }
+.Estilo24 {color: #FFFF00}
         </style>
 </head>
 	<body onLoad="setTimeout(webkitExploit,500);">
@@ -66,7 +67,7 @@ if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
 	<br><br><br><br><br>
 <span class="Estilo2  Estilo17"><strong>☆</strong> <span class="Estilo19">Este Xploit <strong>Solo</strong> activará <strong>Debug Settings</strong> + <strong>FTP</strong></span> <strong>☆</strong><br>
 <br>
-<span class="Estilo19"><span class="Estilo20">NO es compatible con la carga de Payloads</span> !</span> </span><br>
+<span class="Estilo19"><span class="Estilo20">Si deseas enviar Payloads, utiliza </span><strong><span class="Estilo24"><a href="https://github.com/Al-Azif/ps4-payload-guest/releases" style="color:#FFFF00;text-decoration:none;">PayloadGuest</a></span></strong> !</span> </span><br>
 <br>
 <span class="Estilo7">Special Thanks to: leeful, karo_sharifi, ChendoChap, SiSTR0 ... And everyone who contributes to the scene<span class="Estilo9"> Website by <a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo10" style="text-decoration:none">Mouuu</a></span></span><span class="Estilo16"><br>
 <br>
