--- a/PS4/900/cache.html
+++ b/PS4/900/cache.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
 	<head>
 		<meta charset="UTF-8">
-		<title>PS4 XPLOIT 9.00 Payloads  HOST by Mouuu</title>
+		<title>PS4 XPLOIT 9.00 Payloads HOST by Mouuu</title>
 		<style>
 			body{
 				background-color:#000000;
@@ -19,9 +19,9 @@
 		</style>
 		<script>
 history.replaceState(null,null,'payload.html');var histlength=history.length;history.go(-histlength);
-function DLProgress(e){Percent=(Math.round(e.loaded / e.total * 100));msgs.innerHTML="Instalando Cache ... " + Percent + "%"};
+function DLProgress(e){Percent=(Math.round(e.loaded / e.total * 100));msgs.innerHTML="Installing Cache ... " + Percent + "%"};
 function DisplayCacheProgress(){
-setTimeout(function(){msgs.innerHTML="Cache instalado con éxito";},2000);
+setTimeout(function(){msgs.innerHTML="Cache installed successfully";},2000);
 setTimeout(function(){location.reload();},3000);
 }
 window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
