--- a/ES/PS4/900/index.html
+++ b/ES/PS4/900/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- PS4 Jailbreak Host 9.00FW > Special Thanks to: @leeful @karo_sharifi SiSTR0 . And everyone who contributes to the scene. Website by Mouuu @_mour0ne_ -Youtube: Mouuu -->
+<!-- PS4 Jailbreak Host 9.00FW > Special Thanks to: @leeful @karo_sharifi SiSTR0 . And everyone<meta http-equiv="content-type" content="text/html;charset=utf-8" /><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
+ who contributes to the scene. Website by Mouuu @_mour0ne_ -Youtube: Mouuu -->
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
 <style type="text/css">
 <!--
