--- a/PS4/900/index.html
+++ b/PS4/900/index.html
@@ -42,7 +42,8 @@ color: white;
 width: 128px;
 height: 128px;
 padding-bottom: 5px;
-text-align: center;
+text-align: center;<!-- PS4 Jailbreak Host 9.00FW > Special Thanks to: @leeful @karo_sharifi SiSTR0 . And everyone who contributes to the scene. Website by Mouuu @_mour0ne_ -Youtube: Mouuu -->
+
 font-size: 20px;
 margin-top: 8px;
 margin-bottom: 48px;
