--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
 	<head>
 		<meta charset="UTF-8">
-		<title>GoldHEN 2.4b5 for 5.05 / 6.72 / 9.00 - HOSTXPLOIT by Mouuu</title>
+		<title>GoldHEN 2.4b5 for 9.00 - HOSTXPLOIT by Mouuu</title>
 		<style>
 		html {
  border: 8px solid #FFFC33;!important
