--- a/cache.html
+++ b/cache.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
 	<head>
 		<meta charset="UTF-8">
-		<title>PS4 XPLOIT GoldHEN 2.4b5 for 9.00 - HOST by Mouuu</title>
+		<title>PS4 XPLOIT ★ Basic HEN for 9.00 - HOST by Mouuu</title>
 		<style>
 			body{
 				background-color:#000000;
